# spectrochempy-omnic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build_package.yml  pre-commit.yml  prepare_new_release.yml  publish_draft_new_release.yml  test_package.yml
src/spectrochempy_omnic/: __init__.py
src/spectrochempy_omnic/plugin/: omnicreaderplugin.py  utils.py
src/spectrochempy_omnic/reader/: read_omnic.py
tests/: conftest.py  test_read_omnic.py
tests/plugin/: test_omnicreaderplugin.py
tests/reader/: test_read_omnic.py  test_read_soc.py
